feat: Introduce new features

--- a/snippets/html/1.html
+++ b/snippets/html/1.html
@@ -5,12 +5,21 @@
     <title>Document</title>
   </head>
   <body>
-    <marquee bgColor="lightgreen"
-      >Hello World
+    <a name="anchor">anchor</a>
+
+    <h2 id="anchor2">anchor2</h2>
+
+    <marquee bgColor="lightgreen">
+      <em>emphasis, italic</em>
+      <span>&</span>
+      <i>emphasis, italic</i>
       <input type="password" />
     </marquee>
-    <marquee loop="1"
-      >Hello World
+
+    <marquee loop="1">
+      <strong>strong, bold</strong>
+      <span>&</span>
+      <b>strong, bold</b>
       <input disabled />
     </marquee>
 
